--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,22 @@ body{
   background: url("../public/images/bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   width: 100%;
+  color: #fff;
   height: 100vh;
+}
+.container_text{
+  /* background-color: #fff; */
+  height: 50%;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5rem;
+  /* margin-left: -100px; */
+}
+.container_text > *{
+  margin: 50px;
 }
